# SinoNomViet_Transliteration_OCR

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alignment_validator.py  data_scraper.py  hvm_dataset_generator.ipynb  pyproject.toml  requirements.txt  spatial_layout_engine.py
.github/ISSUE_TEMPLATE/: bug_report.md  dictionary_contribution.md  feature_request.md
.github/workflows/: ci.yml
data/dicts/: QuocNgu_SinoNom.dic  SinoNom_Similar.dic
hannom-app/: .env.example  .gitignore  Dockerfile.app  Dockerfile.worker  README.md  SHARE.md  docker-compose.yml  requirements-app.txt  requirements-worker-cpu.txt  requirements-worker.txt
hannom-app/app/: __init__.py  auth.py  main.py
hannom-app/app/static/: index.html
hannom-app/data_test/: jobs.db
hannom-app/docs/: DEPLOYMENT.md  HANNOM_APP.md  SUPABASE_MIGRATION.md
hannom-app/pipeline/: __init__.py  autoscan.py  config.py  demo_data.py  imageproc.py  page_context.py  pdf_text.py  runner.py  schema.py
hannom-app/pipeline/correct/: __init__.py  api.py  base.py  dict_corrector.py  mock.py  offline_corrector.py  skip.py
hannom-app/pipeline/db/: __init__.py  assignments_repo.py  batches_repo.py  conn.py  corpus_repo.py  postgres_store.py  records_repo.py  schema.sql  users_repo.py
hannom-app/pipeline/jobstore/: __init__.py  store.py
hannom-app/pipeline/layouts/: __init__.py  _spatial.py  base.py  han_only.py  three_block.py  two_column.py
hannom-app/pipeline/llm/: __init__.py  anthropic_provider.py  base.py  deepseek.py  gemini.py  gemini_batch.py  openai_provider.py  tasks.py
hannom-app/pipeline/ocr/: __init__.py  base.py  kandianguji.py  mock.py  paddle.py  vision.py
hannom-app/pipeline/sheets/: __init__.py  exporter.py
hannom-app/pipeline/translate/: __init__.py  base.py  gemini.py  mock.py  offline_qwen.py  skip.py
hannom-app/scripts/: dryrun_three_block.py  dryrun_two_column.py  show_registries.py
hannom-app/tests/: test_autoscan.py  test_gemini_batch.py  test_jobstore.py  test_registries.py  test_sheets_export.py  test_three_block_regression.py  test_translate.py  test_two_column.py  test_two_column_pdf.py  test_two_column_quality.py
hannom-app/tests/fixtures/: mock_entry1.py  mock_two_column.py
hannom-app/worker/: __init__.py  worker.py
hvb-processing/: .gitignore  README.md
hvb-processing/dags/: .airflowignore  config.ini.example  deploy_airflow.sh  patch_airflow_hvb_requirements.sh  requirements.txt
hvb-processing/dags/jobs/: align_v2_runner.py  build_catalog_runner.py  cleanup_toc_state.py  index_catalog_qdrant.py  index_pairs_qdrant.py  index_qdrant.py  ocr_chatgpt.py  ocr_gemini.py  ocr_gemini_opencv.py  ocr_google_vision.py  ocr_kandianguji.py  ocr_paddle.py  ocr_runner.py  ocr_v2_runner.py  pipeline_common.py  preprocess_opencv_runner.py  refine_entries_runner.py  run_k8s_job.py  split_pdf.py  stitch_entries_runner.py
hvb-processing/dags/pipelines/: align_v2_pages_pipeline.py  build_catalog_pipeline.py  cleanup_toc_state_pipeline.py  hvb_v2_full_pipeline.py  index_catalog_qdrant_pipeline.py  index_pairs_qdrant_pipeline.py  index_qdrant_pipeline.py  ocr_chatgpt_pipeline.py  ocr_compare_pipeline.py  ocr_gemini_pages_pipeline.py  ocr_gemini_pipeline.py  ocr_google_vision_pipeline.py  ocr_kandianguji_pipeline.py  ocr_paddle_pages_pipeline.py  ocr_paddle_pipeline.py  ocr_v2_pages_pipeline.py  opencv_preprocess_pages_pipeline.py  pdf_split_pipeline.py  refine_entries_pipeline.py  (+1 more)
hvb-processing/k8s/: ollama-kubectl.yaml  paddle-ocr-gpu-kubectl.yaml  paddle-ocr-kubectl.yaml  paddle-ocr.yaml
hvb-processing/scripts/: deploy.sh  deploy_ollama_k3s.sh  deploy_paddle_ocr.sh  deploy_paddle_ocr_k3s.sh  init_qdrant_hvb.sh  install_airflow_ocr_deps.sh  read_ocr_results.sh  run_batch.sh  run_local.sh  run_split.sh  setup_ocr_secrets.sh  upload_hvb_base.sh
notebooks/: 01_data_scraper.ipynb  02_ocr_and_layout.ipynb  03_alignment_and_export.ipynb  04_visual_playground.ipynb
src/sinonom_ocr/: __init__.py  alignment_validator.py  data_scraper.py  spatial_layout_engine.py
tests/: test_pipeline.py
(+29 files in other folders)
