[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# ─────────────────────────────────────────────────────────────────────────────
# Project metadata
# ─────────────────────────────────────────────────────────────────────────────
[project]
name        = "sinonom-ocr"
version     = "0.1.0"
description = "End-to-end NLP pipeline for historical SinoNom manuscripts — HCMUS NLP Project"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.10"
keywords    = [
  "nlp", "ocr", "sino-nom", "vietnamese", "classical-chinese",
  "digital-humanities", "levenshtein", "alignment",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]
authors = [
  { name = "HCMUS NLP Team", email = "nlp@fit.hcmus.edu.vn" },
]

# ─────────────────────────────────────────────────────────────────────────────
# Runtime dependencies
# ─────────────────────────────────────────────────────────────────────────────
dependencies = [
  # Web scraping
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "aiohttp>=3.9.0",
  "aiofiles>=23.2.0",
  # Data processing
  "numpy>=1.26.0",
  "tqdm>=4.66.0",
  # NLP / string matching
  "rapidfuzz>=3.6.0",
  # XML / Excel
  "lxml>=4.9.0",
  "openpyxl>=3.1.0",
  # Image processing
  "Pillow>=10.0.0",
  # Typing backports
  "typing-extensions>=4.8.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# Optional / development extras
# ─────────────────────────────────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "pre-commit>=3.7.0",
  "ipykernel>=6.29.0",
  "nbconvert>=7.16.0",
]
notebook = [
  "jupyter>=1.1.0",
  "ipywidgets>=8.1.0",
  "matplotlib>=3.8.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# CLI entry points
# ─────────────────────────────────────────────────────────────────────────────
[project.scripts]
sinonom-scrape = "data_scraper:main"

# ─────────────────────────────────────────────────────────────────────────────
# Tool configurations
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length    = 100
src            = ["."]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "ANN", # flake8-annotations
  "D",   # pydocstyle (Google style)
]
ignore = [
  "D100",  # Missing docstring in public module (handled in headers)
  "D104",  # Missing docstring in public package
  "ANN101", "ANN102",  # self/cls type hints
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["data_scraper", "spatial_layout_engine", "alignment_validator"]

[tool.mypy]
python_version         = "3.10"
strict                 = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --cov=. --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
omit = ["tests/*", "*.ipynb"]

# ─────────────────────────────────────────────────────────────────────────────
# uv workspace settings
# ─────────────────────────────────────────────────────────────────────────────
[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "pre-commit>=3.7.0",
  "ipykernel>=6.29.0",
  "nbconvert>=7.16.0",
  "jupyter>=1.1.0",
  "ipywidgets>=8.1.0",
  "matplotlib>=3.8.0",
]
